futures/testcrate/ui/forget-semicolon.stderr
error[E0308]: mismatched types
 --> $DIR/forget-semicolon.rs:8:5
  |
8 |     Some(())
  |     ^^^^^^^^- help: try adding a semicolon: `;`
  |     |
  |     expected (), found enum `std::option::Option`
  |
  = note: expected type `()`
             found type `std::option::Option<()>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
